# federal-bills-explainer

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_GUIDE.md  FOLLOW_UP_ISSUES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  VERCEL_DEPLOYMENT.md  WARP.md  conftest.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  test.html  vercel.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-pr.yml  ci.yml  database-migrations.yml  deploy-production.yml  deploy-staging.yml  ingest.yml  nightly-ingest.yml
.github/workflows/Create .github/workflows/: claude.yml
apps/api/: .dockerignore  Dockerfile  requirements.txt  run-dev.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_pgvector_index.py  003_add_ingestion_models.py  004_add_performance_indexes.py  005_add_job_tracking.py  006_add_incremental_sync.py  007_add_user_features.py
apps/api/app/: main.py
apps/api/app/dependencies/: auth.py
apps/api/app/middleware/: security.py
apps/api/app/routers/: admin.py  analytics.py  auth.py  bills.py  export.py  (+10 more)
apps/api/tests/: test_bills.py  test_routers_admin.py  test_routers_bills.py  test_routers_health.py  test_routers_monitoring.py
apps/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/frontend/e2e/: accessibility.spec.ts  bill-detail.spec.ts  homepage.spec.ts  search.spec.ts
apps/frontend/public/: manifest.json  sw.js
apps/ingestion/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ingestion-cli/: ingestion_cli.py
apps/ingestion/fbx_ingest/: __init__.py  __main__.py  cli.py  congress.py  embed.py  explain.py  settings.py  store.py  types.py
apps/ingestion/fixtures/: sample_bills.json
docs/: ADVANCED_SEARCH.md  ANALYTICS.md  CI_CD.md  DEPLOYMENT.md  PWA.md  RATE_LIMITING.md  SOCIAL_FEATURES.md
fixtures/: congress_gov_became_law_sample.json
infra/: .env.example  docker-compose.yml
infra/database/: optimizations.sql
infra/k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml
infra/monitoring/alerts/: api-alerts.yml
infra/monitoring/prometheus/: prometheus.yml
src/: proxy.ts
src/app/: error.tsx  layout.tsx  not-found.tsx  sitemap.ts
src/app/(auth)/: layout.tsx
src/app/(main)/: layout.tsx  page.tsx
src/components/: providers.tsx
src/components/bills/: bill-card.tsx  bill-explanation.tsx  bill-list.tsx
src/components/layout/: footer.tsx  header.tsx
src/components/search/: filter-panel.tsx  search-bar.tsx
src/components/shared/: auth-modal.tsx  error-boundary.tsx  pagination.tsx  theme-toggle.tsx
src/components/social/: bookmark-button.tsx  comments.tsx  export-button.tsx  feedback-buttons.tsx  share-button.tsx  track-button.tsx
src/hooks/: use-auth.ts  use-bills.ts  use-bookmarks.ts  use-comments.ts  use-profile.ts  use-tracking.ts
src/lib/: logger.ts  rate-limit.ts  validators.test.ts  validators.ts
src/lib/ai/: embed.ts  explain.ts  provider.ts
src/lib/congress/: client.ts  types.ts
src/lib/db/: index.ts  schema.ts
src/lib/ingestion/: pipeline.ts
src/lib/supabase/: auth-helpers.ts  server.ts
src/stores/: filter-store.ts  ui-store.ts
src/types/: index.ts
supabase/migrations/: 20260404230712_create_initial_schema.sql  20260404230726_enable_rls_policies.sql  20260405045258_add_full_text_search.sql  20260506000000_drop_embeddings_table.sql  20260506000001_harden_function_security.sql
(+87 files in other folders)
