[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fbx-ingest"
version = "0.1.0"
description = "Federal Bills Explainer - Data Ingestion CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.20.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.0.0",
    "transformers>=4.36.2",
    "datasets>=4.4.1",
    "accelerate>=1.12.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.2.4",
    "fbx-core",
]

[project.scripts]
fbx-ingest = "fbx_ingest.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fbx_ingest*"]
